[package]
name = "rtj"
version = "0.3.1"
authors = ["Anthony J. Martinez <anthony@ajmartinez.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/anthonyjmartinez/rtj"
repository = "https://github.com/anthonyjmartinez/rtj.git"
description = "Run This Job, a generic job execution framework in Rust"
keywords = ["network", "services", "api"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto_box = "0.7"
rand = "0.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
rmp-serde = "1"
